tests/codegen/errors/reader/special-forms/atom.reader.error.reader.cond.empty/reader-cond-empty.mon
;; TEST-ID: tests.codegen.reader-error.reader-cond-empty
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/special-forms
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: 'cond' requires at least one clause
;; TEST-ATOM: atom.reader.error.reader.cond.empty
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.cond.empty
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: 'cond' requires at least one clause
;; TEST-READER-PATH: reader.c:2943 parser.cond
;; TEST-CODEGEN-PATH: diagnostic.parser.cond
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:2943 'cond' requires at least one clause
;; TEST-USES-ATOM: atom.reader.error.reader.cond.empty
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.cond
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/special-forms/atom.reader.error.reader.cond.empty
;; TEST-MENU-PATH: codegen/errors/reader/special-forms/atom.reader.error.reader.cond.empty
;; TEST-ATOM-LEAF: atom.reader.error.reader.cond.empty
;; TEST-CLI-TARGET: codegen errors reader special-forms

(module Main)
(cond)
